tds-gallery: change media refs, fix card wrap on internet security pg

--- a/scss-grunt/sass/_tds-foundations-partials/_tds-gallery.scss
+++ b/scss-grunt/sass/_tds-foundations-partials/_tds-gallery.scss
@@ -27,7 +27,7 @@
   color: #fff;
 }
 
-@media all and (min-width: $screen-md-min) {
+@media screen and (min-width: $screen-md-min) {
   .home-grid li {
     width: 100%;
     float: left;
@@ -37,7 +37,7 @@
   }
 }
 
-@media all and (min-width: $screen-xs-min) {
+@media screen and (min-width: $screen-xs-min) {
   .home-grid li {
     width: 50%;
   }
@@ -45,7 +45,7 @@
     padding: 1em;
   }
 }
-@media all and (min-width: $screen-sm-min) {
+@media screen and (min-width: $screen-sm-min) {
   .home-grid li {
     width: 25%;
   }
@@ -54,7 +54,7 @@ ul.home-grid {
   max-width: 100%;
 }
 // Mobile shop cards that weren't set up loke the other cards.
-@media all and (max-width: $screen-xs-min) {
+@media screen and (max-width: $screen-xs-min) {
   .home-grid li {
     width: 100%;
     float: left;
@@ -76,22 +76,27 @@ ul.home-grid {
 
 @media screen and (max-width: 750px) {
   .gallery-grid { padding-bottom: 1em }
+}
 
-}
-ul.gallery-grid.col-sm-12 {
-    padding-right: 0;
-}
 .gallery-grid li {
   float: left;
   padding: 0 1em 1em 0;
 }
+
+@media (max-width: $screen-sm-max) {
+  //fix ugly card wrapping on internet security gallery page
+    ul.gallery-grid.col-sm-12 > li:nth-child(2n+1) {
+        clear: both;
+    }
+}
+
 .gallery-grid li > div {
   position: relative;
   vertical-align: bottom;
   border: solid 3px $tds-lt-gray;
 }
 
-@media all and (min-width: $screen-xs-min) {
+@media screen and (min-width: $screen-xs-min) {
   .gallery-grid li {
     width: 100%;
     float: left;
@@ -101,7 +106,7 @@ ul.gallery-grid.col-sm-12 {
   }
 }
 
-@media all and (min-width: $screen-sm-min) {
+@media screen and (min-width: $screen-sm-min) {
   .gallery-grid li {
     width: 50%;
   }
@@ -109,7 +114,7 @@ ul.gallery-grid.col-sm-12 {
     padding: 2em;
   }
 }
-@media all and (min-width: $screen-md-min) {
+@media screen and (min-width: $screen-md-min) {
   .gallery-grid li {
     width: 33.333333%;
   }
@@ -136,7 +141,7 @@ h2.gallery-title > span {
   vertical-align: middle;
 }
 
-@media all and (max-width: $screen-xs-min) {
+@media screen and (max-width: $screen-xs-min) {
   h2.gallery-title {
     height: auto;
   }
@@ -147,7 +152,7 @@ h2.gallery-title > span {
   color: $tds-dk-gray;
 }
 
-@media all and (min-width: $screen-xs-min) {
+@media screen and (min-width: $screen-xs-min) {
   .gallery-description {
     height: auto;
   }
@@ -163,14 +168,14 @@ h2.gallery-title > span {
   height: 9em;
 }
 
-@media all and (min-width: $screen-xs-min) {
+@media screen and (min-width: $screen-xs-min) {
   .gallery-img {
     width: 9em;
     height: 9em;
   }
 }
 
-@media all and (min-width: $screen-sm-min) {
+@media screen and (min-width: $screen-sm-min) {
   .gallery-img {
     width: 75%;
     padding-top: 75%;
@@ -217,7 +222,7 @@ h2.gallery-title-4c {
   margin-bottom: 10px;
 }
 
-@media (max-width: $screen-xs) {
+@media screen and (max-width: $screen-xs) {
   .gallery-grid li {
     width: 100%;
     float: left;
